--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -19,6 +19,7 @@
   <body>
     <nav>
       <img src="./images/slack-logo.png" alt="slack_logo" />
+      <i class="fas fa-bars"></i>
       <ul>
         <li>Why Slack?</li>
         <li>Pricing</li>
@@ -27,16 +28,19 @@
       </ul>
     </nav>
     <header>
+      <div id="work-happens-section">
+        <h1>Where Work Happens</h1>
+        <p>
+          When your team needs to kick off a project, hire a new employee, deploy
+          some code, review a sales contract, finalize next year's budget, measure
+          an A/B test, plan your next office opening, and more, Slack has you
+          covered.
+        </p>
+        <input type="text" placeholder="Email address">
+        <button type="button" name="button">GET STARTED</button>
+        <p id="sign-in">Already using Slack? <a href="#">Sign in</a></p>
+      </div>
       <img src="./images/home_talking.png" alt="home_work_happening" />
-      <h1>Where Work Happens</h1>
-      <p>
-        When your team needs to kick off a project, hire a new employee, deploy
-        some code, review a sales contract, finalize next year's budget, measure
-        an A/B test, plan your next office opening, and more, Slack has you
-        covered.
-      </p>
-      <button type="button" name="button">GET STARTED</button>
-      <p>Already using Slack? <a href="#">Sign in</a></p>
     </header>
     <main>
       <div>
@@ -45,69 +49,96 @@
           Millions of people around the world have already made Slack the place
           where their work happens.
         </p>
-        <button>DISCOVER WHY</button>
-        <img src="./images/airbnb-logo.png" alt="" />
-        <img src="./images/capital-one-logo.png" alt="" />
-        <img src="./images/harvard-logo.png" alt="" />
-        <img src="./images/los-angeles-times-logo.png" alt="" />
-        <img src="./images/oracle-logo.png" alt="" />
-        <img src="./images/ticketmaster-logo.png" alt="" />
+        <button id="discover-btn">DISCOVER WHY</button>
+        <div id="logos-container">
+          <div class="logo-box">
+            <img src="./images/airbnb-logo.png" alt="" />
+          </div>
+          <div class="logo-box">
+            <img src="./images/capital-one-logo.png" alt="" />
+          </div>
+          <div class="logo-box">
+            <img src="./images/harvard-logo.png" alt="" />
+          </div>
+          <div class="logo-box">
+            <img src="./images/los-angeles-times-logo.png" alt="" />
+          </div>
+          <div class="logo-box">
+            <img src="./images/oracle-logo.png" alt="" />
+          </div>
+          <div class="logo-box">
+            <img src="./images/ticketmaster-logo.png" alt="" />
+          </div>
+        </div>
       </div>
-      <div>
-        <p>Try it for free</p>
-        <p>Already using Slack? <a href="">Sign in</a></p>
-        <button type="button" name="button">GET STARTED</button>
+      <div id="try-it-container">
+        <div>
+          <h3 id="try-it-title">Try it for free</h3>
+          <p>Already using Slack? <a href="">Sign in</a></p>
+        </div>
+        <div>
+          <input type="text" placeholder="Email address">
+          <button type="button" name="button">GET STARTED</button>
+        </div>
       </div>
     </main>
     <footer>
-      <div>
-        <img src="./images/iso-slack.png" alt="" />
-        <ul>
-          <li>COMPANY</li>
-          <li>About Us</li>
-          <li>Careers</li>
-          <li>Blog</li>
-          <li>Press</li>
-          <li>Brand Guidelines</li>
-        </ul>
-        <ul>
-          <li>PRODUCT</li>
-          <li>Why Slack?</li>
-          <li>Enterprise</li>
-          <li>Customer Stories</li>
-          <li>Pricing</li>
-          <li>Security</li>
-        </ul>
-        <ul>
-          <li>RESOURCES</li>
-          <li>Download</li>
-          <li>Help Center</li>
-          <li>Guides</li>
-          <li>Events</li>
-          <li>App Directory</li>
-          <li>API</li>
-        </ul>
-        <ul>
-          <li>EXTRAS</li>
-          <li>Podcast</li>
-          <li>Slack Shop</li>
-          <li>Slack at Work</li>
-          <li>Slack Fund</li>
-        </ul>
+      <div id="footer-list-container">
+        <div>
+          <img id="slack-logo" src="./images/iso-slack.png" alt="" />
+        </div>
+        <div id="footer-list">
+          <ul>
+            <li>COMPANY</li>
+            <li>About Us</li>
+            <li>Careers</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>Brand Guidelines</li>
+          </ul>
+          <ul>
+            <li>PRODUCT</li>
+            <li>Why Slack?</li>
+            <li>Enterprise</li>
+            <li>Customer Stories</li>
+            <li>Pricing</li>
+            <li>Security</li>
+          </ul>
+          <ul>
+            <li>RESOURCES</li>
+            <li>Download</li>
+            <li>Help Center</li>
+            <li>Guides</li>
+            <li>Events</li>
+            <li>App Directory</li>
+            <li>API</li>
+          </ul>
+          <ul>
+            <li>EXTRAS</li>
+            <li>Podcast</li>
+            <li>Slack Shop</li>
+            <li>Slack at Work</li>
+            <li>Slack Fund</li>
+          </ul>
+        </div>
       </div>
-      <div>
+      <div id="footer-contact-list">
         <ul>
           <li>Status</li>
           <li>Privacy & Terms</li>
           <li>Contact Us</li>
         </ul>
         <div>
-          <img src="./images/us-flag.png" alt="" />
-          <span>English (US)</span>
-          <i class="fas fa-chevron-down"></i>
-          <i class="fab fa-twitter"></i>
-          <i class="fab fa-facebook-f"></i>
-          <i class="fab fa-youtube"></i>
+          <div id="flag-container">
+            <img id="flag" src="./images/us-flag.png" alt="" />
+            <span>English (US)</span>
+            <i class="fas fa-chevron-down"></i>
+          </div>
+          <div id="social-container">
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-youtube"></i>
+          </div>
         </div>
       </div>
     </footer>
